--- a/smurfs/src/components/App.css
+++ b/smurfs/src/components/App.css
@@ -2,27 +2,35 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.smurf-container{
+  display:flex;
+  flex-wrap: wrap;
+  width:80%;
+  margin:1% auto;
+  justify-content: space-around;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+.smurf-container div{
+  width:24%;
+  border: 1px solid black;
+  border-radius: 8px;
+  margin:.5% 0%;
+  padding-bottom: 1%;
+  background:white;
 }
 
-.App-title {
-  font-size: 1.5em;
+.smurf-container button {
+  color:black;
+  background: #88CCFF;
+  border:1px solid white;
+  margin: 0% 2%;
+  padding:1% 4%;
+  border-radius:8px;
+  cursor:pointer;
 }
 
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.smurf-container button:hover {
+  color:black;
+  background: white;
+  border:1px solid #88CCFF;
 }
