--- a/smurfs/src/components/App.css
+++ b/smurfs/src/components/App.css
@@ -2,6 +2,36 @@
   text-align: center;
 }
 
+.app-head{
+  background:white;
+  width:80%;
+  margin:2% auto;
+  border:1px solid black;
+  border-radius: 8px;
+  padding-bottom: 2%;
+}
+
+.edit-div{
+  background:white;
+  width:60%;
+  margin:0 auto;
+  padding:1% 0%;
+  display:flex;
+  border:1px solid black;
+  border-radius:8px;
+}
+
+.edit-div form{
+  width: 60%;
+}
+
+form{
+  display:flex;
+  width: 45%;
+  margin:0 auto;
+  justify-content: space-around;
+}
+
 .smurf-container{
   display:flex;
   flex-wrap: wrap;
